# pastor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_requirements  pyproject.toml  requirements.txt
pastor/: config.py  database.py  dependencies.py  main.py
pastor/paste/: constants.py  controller.py  dependencies.py  models.py  persistent_storage.py  routes.py  seqid.py  service.py  storage.py  utils.py
pastor/static/css/: styles.css
pastor/templates/: 404.html  create_paste.html  legal.html  read_paste.html
