[tool.poetry]
name = "pastor"
version = "0.1.0"
description = ""
authors = ["Max Smagin <lazlogogalac777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
sqids = "^0.5.0"
nh3 = "^0.2.18"
sqlalchemy = "^2.0.34"
psycopg = {extras = ["binary"], version = "^3.2.1"}

[tool.poetry.scripts]
start = "pastor.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
